# pdf-api

./: .env  .gitignore  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
.circleci/: config.yml
app/adapter/into/fastapi/: dependencies.py  lambda.py  main.py
app/adapter/into/fastapi/routes/: pdf.py  pdf_gen.py  pdf_generation.py  pdf_template.py
app/adapter/into/sqs/: handler.py
app/domain/: pdf.py  task.py
app/infrastructure/db/: __init__.py
app/infrastructure/sqs/: __init__.py
app/infrastructure/storage/: __init__.py
app/ports/: db.py  pdf.py  storage.py  task.py  user.py
app/tests/functional/: test_pdf_api.py
app/use_case/: create_pdf.py  create_pdf_task.py  generate_pdf.py  generate_pdf_task.py  get_pdf_task.py  list_pdf.py  upload_asset.py
infra/: Makefile  template.tfvars
infra/docker/: api.dockerfile
infra/tf/: main.tf  tfapply  variables.tf
infra/tf/modules/api/aws/: main.tf
infra/tf/modules/dns/aws/: main.tf  output.tf
infra/tf/modules/images/aws/: main.tf
infra/tf/modules/queue/aws/: main.tf
infra/tf_pipeline/: main.tf  variables.tf
infra/tf_pipeline/modules/images/aws/: output.tf
scripts/: code-artifact-poetry.sh  deploy.sh  plan.sh  push.sh
